--- a/public/collections/publications/2020.md
+++ b/public/collections/publications/2020.md
@@ -1,7 +1,12 @@
 ---
 year: "2020"
 publications:
-  - name: First publication
-    title: Pub Title
-    description: Some pub desc
+  - name: Promoter methylation of the MGAT3 and BACH2 genes correlates with the
+      composition of the immunoglobulin G glycome in inflammatory bowel disease.
+    title: Clinical Epigenetics, 10:75.
+    description: Klasić M, Markulin D, Vojta A, Samaržija I, Biruš I, Dobrinić P,
+      Ventham NT, Trbojević Akmačić I, Šimurina M, Štambuk J, Razdorov G,
+      Kennedy NA, Satsangi J, Dias AM, Pinho S, Annese V, Latiano A, D’Inca R,
+      IBD consortium, Lauc G, Zoldoš V (2018)
+    link: 10.1186/s13148-018-0507-y
 ---
