--- a/public/collections/publications/2019.md
+++ b/public/collections/publications/2019.md
@@ -7,4 +7,8 @@ publications:
     description: Antagonistic and synergistic epigenetic modulation using
       orthologous CRISPR/dCas9-based modular system.
     link: "https://doi.org/10.1093/nar/gkz709 "
+  - title: J Biotechnol
+    description: Active fusions of Cas9 orthologs
+    name: Josipović G, Zoldoš V, Vojta A
+    link: https://doi.org/10.1016/j.jbiotec
 ---
