--- a/public/collections/publications/2019.md
+++ b/public/collections/publications/2019.md
@@ -11,4 +11,9 @@ publications:
     description: Active fusions of Cas9 orthologs
     name: Josipović G, Zoldoš V, Vojta A
     link: https://doi.org/10.1016/j.jbiotec
+  - title: CRISPR/Cas9-based epigenome editing
+    description: An overview of dCas9-based tools with special emphasis on
+      off-target activity.
+    name: Tadić V, Josipović G, Zoldoš V, Vojta A
+    link: "https://doi.org/doi: 10.1016/j.ymeth.2019.05.003"
 ---
