Update Photo-gallery “2020”

--- a/public/collections/photo-gallery/2020.md
+++ b/public/collections/photo-gallery/2020.md
@@ -3,6 +3,9 @@ year: 2020
 image: /uploads/lab-members-aleksandar.jpg
 imageGallery:
   - thumbImg: /uploads/main.jpg
+    fullImg: /uploads/main.jpg
   - thumbImg: /uploads/research-main.jpg
+    fullImg: /uploads/research-main.jpg
   - thumbImg: /uploads/research.jpg
+    fullImg: /uploads/research.jpg
 ---
