chore: minor publication adjustments

--- a/public/collections/publications/2019.md
+++ b/public/collections/publications/2019.md
@@ -1,12 +1,12 @@
 ---
-year: "2019"
+year: 2019
 publications:
   - name: Josipović G, Tadić V, Klasić M, Zanki V, Bečeheli I, Chung F, Ghantous A,
       Keser T, Madunić J, Bošković M, Lauc G, Herceg Z, Vojta A, Zoldoš V
     title: Nucleic Acids Research
     description: Antagonistic and synergistic epigenetic modulation using
       orthologous CRISPR/dCas9-based modular system.
-    link: "https://doi.org/10.1093/nar/gkz709 "
+    link: "https://doi.org/10.1093/nar/gkz709"
   - title: J Biotechnol
     description: Active fusions of Cas9 orthologs
     name: Josipović G, Zoldoš V, Vojta A
