--- a/public/collections/publications/2020.md
+++ b/public/collections/publications/2020.md
@@ -1,9 +1,9 @@
 ---
-year: "2020"
+year: 2020
 publications:
   - title: "Glycosylation of immunoglobulin G "
     name: Klarić L, Tsepilov AY, Stanton CM, Mangino M, Sikka TT, Esko T
-    link: "DOI: 10.1126/sciadv.aax0301"
+    link: "https://doi.org/10.1126/sciadv.aax0301"
     description: Glycosylation of immunoglobulin G is regulated by large network of
       genes pleiotropic with inflammatory diseases.
 ---
